@@ -22,6 +22,7 @@ version 3.00:
 	- use block to declare $VERSION.  GitHUB pull #1 [Graham Knop]
 	- methods without description will be followed with a blank
 	  line anyway in the manual page.
+	- pod, pod2 and html formatters lost subsubsections.
 
 	Improvements:
 	- replace File::Slurp by File::Slurper.
